environment/development/e705-back/all/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e705-back-deployment
  namespace: doa-e705-dev
  labels:
    app: e705-app
  annotations:
    sidecar.jaegertracing.io/inject: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: e705-app
  template:
    metadata:
      namespace: doa-e705-dev
      labels:
        app: e705-app
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        co.elastic.logs/enabled: 'true'
        co.elastic.logs/json.add_error_key: 'true'
        co.elastic.logs/json.keys_under_root: 'true'
    spec:
      serviceAccountName: sa-e705-back
      automountServiceAccountToken: false
      containers:
        - name: e705-back
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          image: e705
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /opt/app/config
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: management-port
              containerPort: 8081
              protocol: TCP
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: management-port
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: management-port
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: management-port
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 1Gi

      volumes:
        - name: config
          configMap:
            name: e705-back-config
        - name: oauth-secrets
          secret:
            secretName: external-e705-secrets
