environment/development/e705-back/all/service-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: e705-back-monitoring
  namespace: doa-e705-dev
  labels:
    app: e705-app
    component: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8081'
    prometheus.io/path: '/actuator/prometheus'
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: management
  selector:
    app: e705-app
