environment/development/e705-back/all/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e705-back-service
  namespace: doa-e705-dev
  labels:
    app: e705-app
    version: 1.0.1-896-40407f90
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http-alt  # Alternative name since we're exposing 8080->8080
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: management
  selector:
    app: e705-app
