environment/development/e705-back/all/ingress-health.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e705-ingress-health
  namespace: doa-e705-dev
  labels:
    app: e705-app
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, HEAD"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept"
    minfin.oauth2.be/iam-realm: "public"
spec:
  rules:
    - host: e705.dev.finbel.intra
      http:
        paths:
          - path: /api/actuator/health/
            pathType: Prefix
            backend:
              service:
                name: e705-back-service
                port:
                  number: 8081
  tls:
    - hosts:
        - e705.dev.finbel.intra
      secretName: e705-tls
